force-app/main/default/objects/AH_CaseFlagPreferences__c/AH_CaseFlagPreferences__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>NICC-026092</description>
    <label>AH Case Flag Preferences</label>
</CustomObject>