force-app/main/default/objects/AH_CaseFlagPreferences__c/fields/Age_2_Image__c.field-meta.xml
<CustomField>
    <fullName>Age_2_Image__c</fullName>
    <description>NICC-026092</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Age 2 Image</label>
    <length>50</length>
    <type>Text</type>
</CustomField>