force-app/main/default/objects/AH_CaseFlagPreferences__c/fields/Age_3_Hours__c.field-meta.xml
<CustomField>
    <fullName>Age_3_Hours__c</fullName>
    <description>NICC-026092</description>
    <label>Age 3 Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>