force-app/main/default/objects/AH_CaseFlagPreferences__c/fields/AH_Blank_Image__c.field-meta.xml
<CustomField>
    <fullName>AH_Blank_Image__c</fullName>
    <description>NICC-026092</description>
    <encryptionScheme>None</encryptionScheme>
    <label>AH Blank Image</label>
    <length>50</length>
    <type>Text</type>
</CustomField>