force-app/main/default/objects/AH_CaseFlagPreferences__c/fields/Clear_on_Activity__c.field-meta.xml
<CustomField>
    <fullName>Clear_on_Activity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NICC-026092</description>
    <label>Clear on Activity</label>
    <type>Checkbox</type>
</CustomField>