force-app/main/default/objects/AH_CaseFlagPreferences__c/fields/Clear_On_Case_Origin__c.field-meta.xml
<CustomField>
    <fullName>Clear_On_Case_Origin__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NICC-026092</description>
    <label>Clear On Case Origin</label>
    <type>Checkbox</type>
</CustomField>