force-app/main/default/objects/AH_CaseFlagPreferences__c/fields/Clear_on_Outbound_Email__c.field-meta.xml
<CustomField>
    <fullName>Clear_on_Outbound_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NICC-026092</description>
    <label>Clear on Outbound Email</label>
    <type>Checkbox</type>
</CustomField>