force-app/main/default/objects/AH_CaseFlagPreferences__c/fields/Company_Domain__c.field-meta.xml
<CustomField>
    <fullName>Company_Domain__c</fullName>
    <description>NICC-026092</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Company Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>