force-app/main/default/objects/AH_CaseFlagPreferences__c/fields/Excluded_Users__c.field-meta.xml
<CustomField>
    <fullName>Excluded_Users__c</fullName>
    <description>NICC-026092</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Excluded Users</label>
    <length>255</length>
    <type>Text</type>
</CustomField>