force-app/main/default/objects/AH_CaseFlagPreferences__c/fields/Hours__c.field-meta.xml
<CustomField>
    <fullName>Hours__c</fullName>
    <description>NICC-026092</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Hours</label>
    <length>50</length>
    <type>Text</type>
</CustomField>