force-app/main/default/objects/AH_CaseFlagPreferences__c/fields/Organisation_Wide__c.field-meta.xml
<CustomField>
    <fullName>Organisation_Wide__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NICC-026092</description>
    <label>Organisation Wide</label>
    <type>Checkbox</type>
</CustomField>