force-app/main/default/objects/AH_CaseFlagPreferences__c/fields/Set_On_Inbound_Email__c.field-meta.xml
<CustomField>
    <fullName>Set_On_Inbound_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NICC-026092</description>
    <label>Set On Inbound Email</label>
    <type>Checkbox</type>
</CustomField>