force-app/main/default/objects/AH_CaseFlagPreferences__c/fields/Track_Case_Status__c.field-meta.xml
<CustomField>
    <fullName>Track_Case_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NICC-026092</description>
    <label>Track Case Status</label>
    <type>Checkbox</type>
</CustomField>